test/good/arrays/for09.px

a = [1]
for x in a do
    x += 3
    print a[0]
    print x

print a
