test/bad/arrays/comprehension11.px

[x for x + 1 in [0]]
